added questions on java 8 memory management changes